unpackaged/main/default/objects/Trip__c/fields/Absent_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Absent_Percentage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absent Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>