unpackaged/main/default/objects/Trip__c/fields/Absent_Students__c.field-meta.xml
<CustomField>
    <fullName>Absent_Students__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absent Students</label>
    <length>20</length>
    <type>Text</type>
</CustomField>