unpackaged/main/default/objects/Trip__c/fields/Assigned_Students__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Students__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Students</label>
    <length>255</length>
    <type>Text</type>
</CustomField>