unpackaged/main/default/objects/Trip__c/fields/Boarded_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Boarded_Percentage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Boarded Percentage</label>
    <length>150</length>
    <type>Text</type>
</CustomField>