unpackaged/main/default/objects/Trip__c/fields/Boarded_Students__c.field-meta.xml
<CustomField>
    <fullName>Boarded_Students__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Boarded Students</label>
    <length>50</length>
    <type>Text</type>
</CustomField>