unpackaged/main/default/objects/Trip__c/fields/Completed_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>