unpackaged/main/default/objects/Trip__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver</label>
    <length>200</length>
    <type>Text</type>
</CustomField>