unpackaged/main/default/objects/Trip__c/fields/Expected_Stops__c.field-meta.xml
<CustomField>
    <fullName>Expected_Stops__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Stops</label>
    <length>100</length>
    <type>Text</type>
</CustomField>