unpackaged/main/default/objects/Trip__c/fields/Returned_Students__c.field-meta.xml
<CustomField>
    <fullName>Returned_Students__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Returned Students</label>
    <length>100</length>
    <type>Text</type>
</CustomField>