unpackaged/main/default/objects/Trip__c/fields/Seating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Seating_Capacity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seating Capacity</label>
    <length>150</length>
    <type>Text</type>
</CustomField>