unpackaged/main/default/objects/Trip__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>