unpackaged/main/default/objects/Trip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Supervisor__c</columns>
    <columns>Trip__c</columns>
    <columns>Started_at__c</columns>
    <columns>Seating_Capacity__c</columns>
    <columns>School__c</columns>
    <columns>Returned_Students__c</columns>
    <columns>Expected_Stops__c</columns>
    <columns>Ended_at__c</columns>
    <columns>Driver__c</columns>
    <columns>Bus__c</columns>
    <columns>Boarded_Students__c</columns>
    <columns>Boarded_Percentage__c</columns>
    <columns>Assigned_Students__c</columns>
    <columns>Absent_Students__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>